# CMake-GDB-VS-Project-Test

./: README.md
src/: CMakeLists.txt  build.bat  clean.bat  helpers.cpp  helpers.h  main.cpp  rebuild.bat
